# GTM-Public-Traded-AI-Accounts

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: copywriter.md  scorer.md
.claude/hooks/: run_tests.sh  session_status.sh
.claude/skills/discover/: SKILL.md
.claude/skills/enrich/: SKILL.md
.claude/skills/icp/: SKILL.md
.claude/skills/ingest/: SKILL.md
.claude/skills/outreach/: SKILL.md
.claude/skills/people/: SKILL.md
.claude/skills/score/: SKILL.md
.claude/skills/status/: SKILL.md
config/: outbound_copywriter.md  personas.yaml  services.yaml  settings.yaml
docs/: ARCHITECTURE.md  PIPELINE.md  SIGNALS.md
docs/superpowers/plans/: 2026-07-06-outreach-angles.md  2026-07-06-pipeline-speed-context-pass.md
docs/superpowers/specs/: 2026-07-06-outreach-angles-design.md  2026-07-06-pipeline-speed-context-review-design.md
sql/: schema.sql
src/pipeline/: __init__.py  __main__.py  analytics.py  angles.py  calibrate.py  cli.py  config.py  db.py  edgar_signals.py  funding_events.py  llm.py  messages.py  models.py  outcomes.py  parallel_client.py  parallel_signals.py  people.py  prescreen.py  scoring.py  universe.py
tests/: test_analytics.py  test_angles.py  test_calibrate.py  test_cli.py  test_config_profiles.py  test_db.py  test_edgar_signals.py  test_funding_events.py  test_llm.py  test_messages.py  test_outcomes.py  test_parallel_client.py  test_parallel_signals.py  test_people.py  test_personas.py  test_prescreen.py  test_scoring.py  test_universe.py
